# github_publish

./: .gitignore  .travis.yml  Jenkinsfile  LICENSE  README.md  pyproject.toml  requirements_dev_std.txt  requirements_develop.txt  setup.py  tox.ini
.github/workflows/: codeql.yml  main.yml  python-app.yml  python-package.yml  wheels.yml
dev.support/: bdist_wheel.bat  run_black_and_ruff.bat
doc/: conf.py  index.rst  requirements.txt
github_publish/: __init__.py  __main__.py  arg_parser.py  github_publish.py  version.py
test/: run_all.py  test_argparser.py  test_github_publish  test_utils.py
