[build-system]
requires = ["requests", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.coverage.run]
source = ["github_publish"]
omit = [""]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/test"
build-frontend = "build"
archs = ["auto64"]  # only build for 64bit architectures
skip = "pp* *_ppc64le *_s390x *-musllinux* cp312-*"  # skip pypy and irrelevant architectures

[tool.ruff]
select = [
    "UP",  # pyupgrade
    "I",  # isort
]
exclude = [""]
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["github_publish"]
order-by-type = false
force-sort-within-sections = true